<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_pub_sub_cpp</name>
  <version>0.0.0</version>
  <description> A simple example of a ROS2 publisher and subscriber nodes in CPP </description>
  <maintainer email="matteodv99tn@gmail.com">Matteo Dalle Vedove</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
